I create a delete button, fix the buttons alignment, add a title element in the colors and buttons

--- a/WhiteBoard/src/App.scss
+++ b/WhiteBoard/src/App.scss
@@ -13,10 +13,6 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-canvas {
-    cursor: url(../src/Img/circle.png) 4 12, auto;
-}
-
 .main-header {
     @include header-colorPalette-pattern;
     position: absolute;
